# videolib-oss-High-level-Video-Access-And-Processing-Project

./: CMakeLists.txt  Pipelines.txt  README.md
python/: ClipReader.py  ClipUtils.py  FfMpegClipReader.py  StreamReader.py  VideoLibUtils.py  ffmpegLog.py
src/localVideoLib/: CMakeLists.txt
src/localVideoLib/localVideoLib.xcodeproj/: default.pbxuser  project.pbxproj
src/localVideoLib/srcMac/: localCapture.hpp  localCapture.mm  localCaptureWrapper.hpp  localCaptureWrapper.mm  localVideo.cpp  localVideoServer.cpp  localVideoServer.h  vdigGrab.cpp  vdigGrab.h
src/localVideoLib/srcWin/: fourcc_patch.h  localVideo.cpp  videoInput.cpp  videoInput.h
src/svcore/: CMakeLists.txt  buffered_file.cpp  event_basic.cpp  frame_allocator.cpp  frame_basic.cpp  nalu.cpp  stream_api.cpp  sv_os.cpp
src/svpcap/: CMakeLists.txt  sv_pcap.cpp
src/videolib/: CMakeLists.txt  bounding_boxes.hpp  frame_cloned.cpp  frame_ffframe.cpp  frame_ffpacket.cpp  logging.c  stream_audio_renderer_portaudio.cpp  stream_audio_resample.cpp  stream_debug.cpp  stream_fffilter.cpp  stream_ffmpeg.cpp  stream_ffmpeg_decoder.cpp  stream_ffmpeg_demux.cpp  stream_ffmpeg_encoder.cpp  stream_ffmpeg_recorder.cpp  stream_ffmpeg_resize_filter.cpp  stream_filter_inserter.cpp  stream_frame_injector.cpp  stream_input_iterator.cpp  stream_ipp_colorconv.cpp  stream_ipp_resize_filter.cpp  stream_jitter_buffer.cpp  stream_limiter.cpp  stream_live555_demux.cpp  stream_local.cpp  stream_mediafoundation_decoder.cpp  stream_metadata_injector.cpp  stream_mmap.cpp  stream_pixelate.cpp  stream_recorder_sync.cpp  stream_resize_base.cpp  stream_resize_base.hpp  stream_resize_factory.cpp  stream_rev_reader.cpp  stream_splitter.cpp  stream_thread_connector.cpp  sv_ffmpeg.cpp  sv_pixfmt.cpp  timestamp_creator.cpp  videolib.c  (+2 more)
